<menu xmlns:android="http://schemas.android.com/apk/res/android"
	  xmlns:com.team8.potatodoctor="http://schemas.android.com/apk/res-auto">
  
    <!-- <searchview
    android:id="@+id/menu_action_search"
    android:actionViewClass="android.widget.SearchView"
    android:icon="@drawable/ic_action_search"
    android:showAsAction="ifRoom"
    android:title="@string/action_search"/> -->
    
    <item android:id="@+id/action_search"
          android:title="@string/action_search"
          android:icon="@drawable/ic_action_search"
          android:showAsAction="ifRoom|collapseActionView"
          android:actionViewClass="android.support.v7.widget.SearchView" />
    
    <item
        android:id="@+id/action_imageshare"
        android:title="@string/action_imageshare"></item>
    <item
        android:id="@+id/action_update"
        android:title="@string/action_update"></item>
    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"></item>
    <item
        android:id="@+id/action_exit"
        android:title="@string/action_exit"></item>

</menu>
